force-app/main/default/objects/InquiryRoute__c/InquiryRoute__c.object-meta.xml
<CustomObject>
    <label>Inquiry Route</label>
    <nameField>
        <displayFormat>IQR-{0000}</displayFormat>
        <label>Inquiry Route ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>