force-app/main/default/objects/InquiryRoute__c/fields/Destination_s_Zone__c.field-meta.xml
<CustomField>
    <fullName>Destination_s_Zone__c</fullName>
    <formula>RouteID__r.DestinationZone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination&apos;s Zone</label>
    <type>Text</type>
</CustomField>