force-app/main/default/objects/InquiryRoute__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <label>Inquiry</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Inquiry Routes</relationshipLabel>
    <relationshipName>InquiryRoutes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>