force-app/main/default/objects/InquiryRoute__c/fields/O_VN_s_Region__c.field-meta.xml
<CustomField>
    <fullName>O_VN_s_Region__c</fullName>
    <formula>RouteID__r.O_Vietnam_s_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O-VN&apos;s Region</label>
    <type>Text</type>
</CustomField>