force-app/main/default/objects/InquiryRoute__c/fields/OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>OriginCountry__c</fullName>
    <formula>Route__r.Route__r.OriginCountry__r.Name</formula>
    <label>Origin Country</label>
    <type>Text</type>
</CustomField>