force-app/main/default/objects/InquiryRoute__c/fields/PickUpAddress__c.field-meta.xml
<CustomField>
    <fullName>PickUpAddress__c</fullName>
    <label>Pick Up Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>