force-app/main/default/objects/InquiryRoute__c/fields/Place_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Inquiry Routes (Place of Delivery)</relationshipLabel>
    <relationshipName>Inquiry_Routes1</relationshipName>
    <type>Lookup</type>
</CustomField>