force-app/main/default/objects/InquiryRoute__c/fields/PODAOD__c.field-meta.xml
<CustomField>
    <fullName>PODAOD__c</fullName>
    <formula>Route__r.Route__r.To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.O.D(A.O.D)</label>
    <type>Text</type>
</CustomField>