force-app/main/default/objects/InquiryRoute__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Inquiry Routes</relationshipLabel>
    <relationshipName>Inquiry_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>