force-app/main/default/objects/InquiryRoute__c/fields/RouteID__c.field-meta.xml
<CustomField>
    <fullName>RouteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Inquiry Routes</relationshipLabel>
    <relationshipName>Inquiry_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>