force-app/main/default/objects/InquiryRoute__c/fields/RouteName__c.field-meta.xml
<CustomField>
    <fullName>RouteName__c</fullName>
    <formula>Route__r.Route__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Name</label>
    <type>Text</type>
</CustomField>