force-app/main/default/objects/InquiryRoute__c/validationRules/Can_not_change_Route.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_change_Route</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Route__c )</errorConditionFormula>
    <errorDisplayField>Route__c</errorDisplayField>
    <errorMessage>You can not change Route. Please use the button &quot;Add Route&quot; to add a new Inquiry Route or delete it if this is an incorrect Route. Thank you!</errorMessage>
</ValidationRule>